[#master] Add header styles

--- a/docs/layout/_partials/header.jade
+++ b/docs/layout/_partials/header.jade
@@ -1,2 +1,7 @@
 header.header
-  a(href="css.html") CSS
+  .container
+    a.logo(href="/") Garden
+    nav.nav
+      a.link(href="about.html") About
+      a.link(href="css.html") CSS
+      a.link(href="js.html") JS
