--- a/docs/layout/_partials/footer.jade
+++ b/docs/layout/_partials/footer.jade
@@ -1,1 +1,6 @@
-footer
+footer.footer 
+  .container 
+    | Copyright Leroy Merlin 2016 <br>
+    | Built with love by <a href="https://github.com/leroy-merlin-br" class="link" target="_blank"> Leroy Merlin Brazil team</a>
+    
+  
