--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -9,5 +9,8 @@ html(lang="pt-BR")
     include _partials/header.jade
     
     main.banner
+      .container
+        h1.title A front end library to help you make ​<strong>your</strong>​ grass greener than the other side
+        a.button(href="css.html") checkout the docs
     
     include _partials/footer.jade
