--- a/docs/layout/postcss/base/reset.css
+++ b/docs/layout/postcss/base/reset.css
@@ -21,6 +21,7 @@ time, mark, audio, video {
   background: transparent;
   border: 0;
   font-size: 100%;
+  font-weight: inherit;
   margin: 0;
   padding: 0;
   outline: 0;
@@ -29,4 +30,8 @@ time, mark, audio, video {
 
 a {
   text-decoration: none;
+}
+
+strong {
+  font-weight: bold;
 }
