Add postcss media query plugin

--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="pt-BR")
   head
     meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     title Garden
     link(rel="stylesheet", href="style.css")
     
