--- a/docs/layout/postcss/molecules/nav.css
+++ b/docs/layout/postcss/molecules/nav.css
@@ -1,7 +1,4 @@
 .nav {
-  float: right;
-  margin-top: 0.625em;
-
   .link {
     color: color($color-white a(50%));
     margin-left: 1.25em;
@@ -9,5 +6,12 @@
     &:hover {
       color: $color-white;
     }
+  }
+}
+
+@media (--tablet) {
+  .nav {
+    float: right;
+    margin-top: 0.625em;
   }
 }
