Add media query styles

--- a/docs/layout/postcss/molecules/nav.css
+++ b/docs/layout/postcss/molecules/nav.css
@@ -1,7 +1,9 @@
 .nav {
+  margin-top: 0.625em;
+
   .link {
     color: color($color-white a(50%));
-    margin-left: 1.25em;
+    margin-right: 1.25em;
 
     &:hover {
       color: $color-white;
@@ -12,6 +14,10 @@
 @media (--tablet) {
   .nav {
     float: right;
-    margin-top: 0.625em;
+
+    .link {
+      margin-left: 1.25em;
+      margin-right: 0;
+    }
   }
 }
