--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -8,6 +8,7 @@
 @import "atoms/logo.css";
 
 @import "molecules/nav.css";
+@import "molecules/sidebar.css";
 
 @import "organisms/header.css";
 @import "organisms/footer.css";
