--- a/docs/layout/_partials/header.jade
+++ b/docs/layout/_partials/header.jade
@@ -2,6 +2,4 @@ header.header
   .container
     a.logo(href="/") Garden
     nav.nav
-      a.link(href="about.html") About
-      a.link(href="css.html") CSS
-      a.link(href="js.html") JS
+      a.link(href="/grid.html", class=collection == 'css' ? "link--active" : undefined) CSS
