--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -4,6 +4,7 @@ html(lang="pt-BR")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title Garden
+    link(rel="stylesheet", href="garden.min.css")
     link(rel="stylesheet", href="style.css")
     
   body
