--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -5,6 +5,7 @@ html(lang="pt-BR")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title #{title} | Garden
     link(rel="stylesheet", href="style.css")
+    link(rel="stylesheet", href="http://yandex.st/highlightjs/8.0/styles/default.min.css")
     
   body
     include _partials/header.jade
