--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -17,7 +17,7 @@ html(lang="pt-BR")
         if sidebar
           nav.sidebar
             each page in collections[collection]
-              a.link(href="/#{page.path}", class=title === page.title ? "link--active" : undefined) #{page.title}
+              a.link(href="/#{page.path}.html", class=title === page.title ? "link--active" : undefined) #{page.title}
         .content!= contents
     
     include _partials/footer.jade
