--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,5 @@
 @import "normalize.css";
 
-@import "atoms/variables.css";
-@import "atoms/box-sizing.css";
-@import "atoms/typography.css";
+@import "atoms/variables";
+@import "atoms/box-sizing";
+@import "atoms/typography";
