--- a/src/css/atoms/typography.css
+++ b/src/css/atoms/typography.css
@@ -3,9 +3,15 @@ html {
 }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: $default-font-family;
 }
 
-@import "atoms/headings";
-@import "atoms/paragraphs";
-@import "atoms/inline-text";
+a {
+  text-decoration: none;
+}
+
+@import "atoms/text/heading";
+@import "atoms/text/paragraph";
+@import "atoms/text/style";
+@import "atoms/text/alignment";
+@import "atoms/text/transform";
