feat(typo): add text transform/alignment docs

--- a/src/css/atoms/typography.css
+++ b/src/css/atoms/typography.css
@@ -10,6 +10,13 @@ a {
   text-decoration: none;
 }
 
+hr {
+  background-color: #eee;
+  border: 0;
+  height: 1px;
+  width: 100%;
+}
+
 @import "atoms/text/heading";
 @import "atoms/text/paragraph";
 @import "atoms/text/style";
