fix(typo): add okaidia as syntax highlight

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -15,4 +15,4 @@
 @import "organisms/content";
 @import "organisms/example";
 
-@import "vendor/prism";
+@import "../../node_modules/prismjs/themes/prism-okaidia.css";
