feat(docs): add Garden logo

--- a/docs/layout/_partials/header.jade
+++ b/docs/layout/_partials/header.jade
@@ -1,5 +1,6 @@
 header.header
   .container
-    a.logo(href="/") Garden
+    a.logo(href="/")
+      img(src="images/garden-white.png", width="100")
     nav.nav
       a.link(href="/grid.html", class=collection == 'css' ? "link--active" : undefined) CSS
