--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -5,6 +5,7 @@ html(lang="pt-BR")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title #{title} | Garden
     
+    link(rel="icon", href="images/favicon.png", type="image/png")
     link(rel="stylesheet", href="garden.min.css")
     link(rel="stylesheet", href="style.css")
     
