--- a/docs/css/organisms/example.css
+++ b/docs/css/organisms/example.css
@@ -1,5 +1,5 @@
 .example {
-  border: 1px solid $color-gray-light;
+  border: 1px solid $color-default-light;
   border-radius: 3px;
   padding: 10px 20px;
 
