--- a/docs/css/organisms/footer.css
+++ b/docs/css/organisms/footer.css
@@ -1,14 +1,15 @@
 .footer {
-  color: $color-gray;
-  font-size: 0.8em;
+  color: $color-default;
+  font-size: .8em;
   line-height: 1.4em;
   margin-top: 20px;
   text-align: center;
 }
 
 @media (--tablet) {
+
   .footer {
-    text-align: left;
     font-size: 1em;
+    text-align: left;
   }
 }
