--- a/docs/css/organisms/header.css
+++ b/docs/css/organisms/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: $color-green;
+  background-color: $color-primary;
   padding-bottom: 1.2em;
   padding-top: 1.2em;
 }
