feat(colors): add box-shadow to palette color

--- a/docs/css/molecules/palette.css
+++ b/docs/css/molecules/palette.css
@@ -2,6 +2,7 @@
   lost-utility: clearfix;
 
   .color {
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .2);
     font-size: .9rem;
     font-weight: bold;
     padding-bottom: 1rem;
