--- a/docs/css/molecules/sidebar.css
+++ b/docs/css/molecules/sidebar.css
@@ -25,7 +25,7 @@
 
       &:hover,
       &:focus {
-        background-color: $color-white;
+        background-color: $color-neutral;
       }
     }
   }
