--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -29,3 +29,5 @@ html(lang="pt-BR")
           return trigger.nextElementSibling;
         }  
       });
+      
+      new Clipboard('[data-clipboard-text]');
