--- a/docs/css/molecules/nav.css
+++ b/docs/css/molecules/nav.css
@@ -2,15 +2,15 @@
   margin-top: .625em;
 
   .link {
-    color: color($color-white a(50%));
+    color: color($color-neutral a(50%));
     margin-right: 1.25em;
 
     &:hover {
-      color: $color-white;
+      color: $color-neutral;
     }
 
     &--active {
-      color: $color-white;
+      color: $color-neutral;
     }
   }
 }
