--- a/docs/css/atoms/container.css
+++ b/docs/css/atoms/container.css
@@ -2,6 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1024px;
+  overflow: auto;
   padding-left: 1.2em;
   padding-right: 1.2em;
   width: 100%;
