feat(colors): add new color
color interface: $color-danger

--- a/docs/css/molecules/palette.css
+++ b/docs/css/molecules/palette.css
@@ -154,6 +154,15 @@
       content: "color-warning: $(color-warning)";
     }
   }
+
+  .color-danger {
+    background-color: $color-danger;
+    color: $color-neutral;
+
+    &::after {
+      content: "color-danger: $(color-danger)";
+    }
+  }
 }
 
 @media (--tablet) {
