fix(banner): change button class

--- a/docs/css/organisms/banner.css
+++ b/docs/css/organisms/banner.css
@@ -11,11 +11,11 @@
     max-width: 700px;
   }
 
-  .button {
+  .btn {
     border: 1px solid $color-neutral;
     border-radius: 3px;
     color: $color-neutral;
-    display: block;
+    display: inline-block;
     font-size: 1.4em;
     font-weight: 200;
     margin-top: 1.875em;
