--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -15,6 +15,6 @@ html(lang="pt-BR")
     main.banner
       .container
         h1.title A front end library to help you make ​<strong>your</strong>​ grass greener than the other side
-        a.button(href="grid.html") checkout the docs
+        a.btn(href="grid.html") checkout the docs
     
     include _partials/footer.jade
