--- a/src/css/atoms/button.css
+++ b/src/css/atoms/button.css
@@ -11,7 +11,7 @@
 
   &:hover,
   &:focus {
-    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, .18), 0 4px 13px 0 rgba(0, 0, 0, .15);
+    box-shadow: 0 20px 20px -10px rgba(0, 0, 0, .2), 0 4px 13px 0 rgba(0, 0, 0, .2);
     transform: translateY(-1px);
   }
 
