--- a/docs/css/organisms/example.css
+++ b/docs/css/organisms/example.css
@@ -40,6 +40,23 @@
   }
 
   .button {
+    margin-bottom: 10px;
     margin-right: 15px;
+
+    &:only-child,
+    &:nth-last-child(4),
+    &:nth-last-child(4) ~ .button {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media (--tablet) {
+
+  .example {
+
+    .button {
+      margin-bottom: 0;
+    }
   }
 }
