feat(about): add about page

--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -3,6 +3,7 @@ html(lang="pt-BR")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
+    meta(name="description" content="A front end library to help you make ​your​ grass greener than the other side")
     title Garden
     
     link(rel="icon", href="images/favicon.png", type="image/png")
@@ -15,6 +16,6 @@ html(lang="pt-BR")
     main.banner
       .container
         h1.title A front end library to help you make ​<strong>your</strong>​ grass greener than the other side
-        a.btn(href="grid.html") checkout the docs
+        a.btn(href="about.html") read about the project
     
     include _partials/footer.jade
