--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -3,6 +3,7 @@ html(lang="pt-BR")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
+    meta(name="description" content="A front end library to help you make ​your​ grass greener than the other side")
     title #{title} | Garden
     
     link(rel="icon", href="images/favicon.png", type="image/png")
