--- a/docs/css/molecules/sidebar.css
+++ b/docs/css/molecules/sidebar.css
@@ -18,7 +18,7 @@
       background-color: color($color-default-light l(95%));
     }
 
-    &--active {
+    &-active {
       border-left-color: $color-primary;
       color: $color-text;
       font-weight: bold;
