docs(scaffolding): change getting started order with about

--- a/docs/layout/_partials/header.jade
+++ b/docs/layout/_partials/header.jade
@@ -3,6 +3,6 @@ header.header
     a.logo(href="/")
       img(src="images/garden-white.png", width="100")
     nav.nav
-      a.link(href="/getting-started.html", class=path == 'getting-started' ? "link-active" : undefined) Getting Started
       a.link(href="/about.html", class=path == 'about' ? "link-active" : undefined) About
-      a.link(href="/grid.html", class=collection == 'css' ? "link-active" : undefined) CSS
+      a.link(href="/getting-started.html", class=path == 'getting-started' ? "link-active" : undefined) Getting Started
+      a.link(href="/scaffolding.html", class=collection == 'css' ? "link-active" : undefined) CSS
