docs(highlight): add highlight items

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,8 +1,10 @@
 @import "atoms/breakpoints";
 
 @import "atoms/container";
+@import "atoms/img";
 
 @import "molecules/nav";
+@import "molecules/highlight";
 @import "molecules/sidebar";
 @import "molecules/palette";
 
