--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -17,5 +17,16 @@ html(lang="pt-BR")
       .container
         h1.title A front end library to help you make ​<strong>your</strong>​ grass greener than the other side
         a.btn(href="about.html") read about the project
+        
+    section.content
+      .container
+        .highlight.align-center
+          img(src="images/mobile_first.svg", alt="Mobile First", class="img")
+          h3.highlight-title Built to scale
+          p  Garden was created from scratch following a scaling Mobile First approach for each component.
+        .highlight.align-center
+          img(src="images/atomic.svg", alt="Atomic", class="img")
+          h3.highlight-title Atomic
+          p  Components were broken into atoms/molecules/organisms in order to create highly reusable code.
     
     include _partials/footer.jade
