--- a/docs/css/organisms/banner.css
+++ b/docs/css/organisms/banner.css
@@ -8,6 +8,7 @@
     font-size: 1.875em;
     line-height: 1.3em;
     lost-utility: clearfix;
+    margin-bottom: 2rem;
     max-width: 700px;
   }
 
@@ -18,7 +19,6 @@
     display: inline-block;
     font-size: 1.4em;
     font-weight: 200;
-    margin-top: 1.875em;
     padding: .625em 1.25em;
 
     &:hover {
