feat(colors): new color `color-success`

--- a/docs/css/molecules/palette.css
+++ b/docs/css/molecules/palette.css
@@ -136,6 +136,15 @@
       content: "color-danger: $(color-danger)";
     }
   }
+
+  .color-success {
+    background-color: $color-success;
+    color: $color-neutral;
+
+    &::after {
+      content: "color-success: $(color-success)";
+    }
+  }
 }
 
 @media (--tablet) {
