fix(button): remove transform animation in focus

--- a/src/css/atoms/button.css
+++ b/src/css/atoms/button.css
@@ -29,7 +29,7 @@
     &:focus {
       box-shadow: none;
       cursor: not-allowed;
-      transform: translateY(0);
+      transform: none;
     }
   }
 
