feat(input): minor change in atom
Changed border-color and text color, remove outline in focus, add
placeholder. Add background-color in `disabled` to prevent firefox gray
color

--- a/src/css/atoms/form/input.css
+++ b/src/css/atoms/form/input.css
@@ -1,27 +1,21 @@
 .input {
   border: 1px solid $color-default-light;
   border-radius: 4px;
-  color: $color-default;
+  color: $color-text;
+  outline: 0;
   padding: .6rem .4rem;
   transition: border-color .3s ease-in-out;
   width: 100%;
 
-  &:hover {
-    border-color: $color-primary-light;
-  }
-
   &:focus {
-    border-left-color: $color-neutral;
-    border-radius: 0;
-    border-right-color: $color-neutral;
-    border-top-color: $color-neutral;
-    outline: none;
+    border-bottom-color: $color-primary-dark;
+    @extend reset-border-color-input;
   }
 
   &[disabled] {
+    background-color: $color-neutral;
 
     &:hover {
-      border-color: $color-default-light;
       cursor: not-allowed;
     }
   }
