--- a/docs/layout/_partials/footer.jade
+++ b/docs/layout/_partials/footer.jade
@@ -2,6 +2,6 @@ footer.footer
   .container 
     hr
     | Copyright Leroy Merlin 2016 <br>
-    | Built with love by <a href="https://github.com/leroy-merlin-br" class="link" target="_blank"> Leroy Merlin Brazil team</a>
+    | Built with <span class="glyph glyph-heart"></span> by <a href="https://github.com/leroy-merlin-br" class="link" target="_blank"> Leroy Merlin Brazil team</a>
     
   
