--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,6 +7,7 @@
 @import "molecules/highlight";
 @import "molecules/sidebar";
 @import "molecules/palette";
+@import "molecules/glyphs";
 
 @import "organisms/header";
 @import "organisms/footer";
