--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -34,11 +34,11 @@ html(lang="pt-BR")
       var text = new Clipboard('[data-clipboard-text]');
       
       text.on('success', function(e) {
-        if (e.trigger.classList && e.trigger.classList.contains('color')) {
+        if (e.trigger.classList) {
           e.trigger.classList.add('copied');
           
           setTimeout(function() {
             e.trigger.classList.remove('copied');
-          }, 2000)
+          }, 1000)
         }
       });
