--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -1,6 +1,7 @@
 @import "normalize.css";
 
 @import "utils/placeholders";
+@import "utils/mixins";
 
 @import "atoms/box-sizing";
 @import "atoms/typography";
