--- a/src/css/atoms/form/textarea.css
+++ b/src/css/atoms/form/textarea.css
@@ -1,26 +1,5 @@
 .textarea {
-  border: 1px solid $color-default-light;
-  border-radius: 4px;
-  color: $color-text;
-  outline: 0;
-  padding-botom: .6rem;
-  padding-left: .4rem;
-  padding-right: 1.4rem;
-  padding-top: .6rem;
-  resize: none;
-  transition: border-color .3s ease-in-out;
-  width: 100%;
-
-  &:focus {
-    border-bottom-color: $color-primary-dark;
-    @extend reset-border-color-input;
-  }
-
-  &[disabled] {
-    background-color: $color-neutral;
-
-    &:hover {
-      cursor: not-allowed;
-    }
+  @mixin form-component default-light, primary-dark {
+    padding-right: 1.4rem;
   }
 }
