--- a/src/css/utils/mixins.css
+++ b/src/css/utils/mixins.css
@@ -1,3 +1,30 @@
+@define-mixin form-component $border-color, $border-color-focus {
+  border: 1px solid $color-$(border-color);
+  border-radius: 4px;
+  color: $color-text;
+  outline: 0;
+  padding-bottom: .6rem;
+  padding-left: .4rem;
+  padding-right: .4rem;
+  padding-top: .6rem;
+  transition: border-color .3s ease-in-out;
+  width: 100%;
+  @mixin-content;
+
+  &:focus {
+    border-bottom-color: $color-$(border-color-focus);
+    @extend reset-border-color-input;
+  }
+
+  &[disabled] {
+    background-color: $color-neutral;
+
+    &:hover {
+      cursor: not-allowed;
+    }
+  }
+}
+
 @define-mixin field-validation $color-name {
 
   &::after {
