feat(form-molecule): add build:js task

--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -23,6 +23,8 @@ html(lang="pt-BR")
     
     include _partials/footer.jade
     
+    script(src="https://code.jquery.com/jquery-1.12.0.min.js")
+    script(src="js/garden.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js")
     script.
       new Clipboard('[data-copy]', {
